--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drone Control Dashboard</title>
-    <link rel="stylesheet" href="css for front end.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -70,4 +70,5 @@
     </script>
 </body>
 </html>
+
 
